# storage-crab-api

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: README.md  api.md  config.md  deployment.md
migrations/: 0001_users_table.sql  0002_files_table.sql
src/: files_services.rs  lib.rs  main.rs
src/models/: file.rs  jwt.rs  mod.rs  user.rs
src/routes/: auth.rs  files.rs  mod.rs  user.rs
src/services/: auth.rs
src/utils/: errors.rs  logger.rs  mod.rs
tests/: auth_tests.rs  files_tests.rs  user_tests.rs
tests/common/: mod.rs
