[package]
name = "storage-crab"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"]}
actix-multipart = "0.7.2"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9"
chrono = {  version = "0.4", features = ["serde"]}
redis = { version ="0.29.1", features = ["tokio-comp"] }
deadpool-redis = "0.20.0"
dotenv = "0.15.0"
derive_more = {  version = "2.0.1", features = ["display"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.15.1", features = ["v4"] }
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8.0"
log = "0.4"
env_logger = "0.11"
openssl = "0.10"

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"]}
tempfile = "3"
serde_json = "1"
actix-http = "3"
actix-multipart-test = { git = "https://github.com/linasdev/actix-multipart-test", branch = "main"}